deploy/base/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    app.kubernetes.io/name: portal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portal
  ports:
    - name: http
      port: 80
      targetPort: http
